# pulumi-tls

./: .appveyor.yml  .ci-mgmt.yaml  .gitignore  .gitmodules  .golangci.yml  .goreleaser.prerelease.yml  .goreleaser.yml  .upgrade-config.yml  CHANGELOG.md  CHANGELOG_OLD.md  COPYRIGHT  Makefile  Makefile.github  README.md  go.mod  go.sum  go.work  go.work.sum  mise.toml  resources.go
.claude/: CLAUDE.md
.config/: mise.test.toml  mise.toml
.github/: copilot-instructions.md
.github/workflows/: build_provider.yml  build_sdk.yml  check-upstream-upgrade.yml  command-dispatch.yml  license.yml  lint.yml  main.yml  master.yml  nightly-test.yml  prerelease.yml  prerequisites.yml  publish.yml  pull-request.yml  release.yml  resync-build.yml  run-acceptance-tests.yml  test.yml  update-bridge.yml  (+4 more)
docs/: _index.md
examples/: examples_dotnet_test.go  examples_go_test.go  examples_nodejs_test.go  examples_py_test.go  examples_test.go  examples_yaml_test.go  go.mod  go.sum  regress_173_test.go
provider/: go.mod  go.sum  provider_program_test.go  resources.go  resources_test.go
scripts/: go.mod  new_major_version.go  plugins.mk  publish-plugin.sh
sdk/: go.mod  go.sum
sdk/python/: Pulumi.yaml  README.md  README.rst  pyproject.toml  setup.py
sdk/python/pulumi_tls/: README.md  __init__.py  _inputs.py  _tables.py  cert_request.py  get_certificate.py  get_public_key.py  locally_signed_cert.py  outputs.py  private_key.py  provider.py  self_signed_cert.py  tables.py
sdk/python/pulumi_tls/config/: __init__.pyi  outputs.py  vars.py
tests/: go.mod  go.sum  regress_173_test.go
(+149 files in other folders)
